Consider demand vertex order of current schedule in local search heuristic